# imperative

./: .gitignore  .hlint.yaml  l.cabal
src/: Core.hs  Interpreter.hs  Main.hs  Normal.hs  Parser.hs  Syntax.hs  Typechecker.hs
